# hyprland-workspaces

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.github/: dependabot.yml
src/: main.rs
