[package]
name = "hyprland-workspaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git" }
serde_json = "1.0"
serde = "1.0"
toml = "0.7.3"
arc = "0.0.1"
regex = "1.7.1"
