[package]
name = "hyprland-workspaces"
description = "A multi-monitor aware Hyprland workspace widget"
homepage = "https://github.com/FieldofClay/hyprland-workspaces"
repository = "https://github.com/FieldofClay/hyprland-workspaces"
readme = "README.md"
keywords = ["hyprland", "eww"]
categories = ["command-line-utilities"]
version = "2.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = "0.3.13"
serde_json = "1.0"
serde = "1.0"
flexi_logger = "0.28"
log = "0.4"
